Closed Bug 1651116 Opened 4 years ago Closed 4 years ago

Crash in [@ memcpy | mozilla::layers::CanvasEventRingBuffer::write]

Categories

(Core :: Graphics: Canvas2D, defect, P1)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- disabled
firefox78 --- disabled
firefox79 --- disabled
firefox80 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Pretty sure this is being caused by the DataSourceSurface failing to map.

This bug is for crash report bp-948a0637-e26a-4cd6-b30c-c3cc90200706.

Top 10 frames of crashing thread:

0 vcruntime140.dll memcpy d:\agent\_work\3\s\src\vctools\crt\vcruntime\src\string\i386\memcpy.asm:307
1 xul.dll mozilla::layers::CanvasEventRingBuffer::write gfx/layers/CanvasDrawEventRecorder.cpp
2 xul.dll mozilla::gfx::RecordedSourceSurfaceCreation::Record<mozilla::gfx::EventRingBuffer> const gfx/2d/RecordedEventImpl.h:3050
3 xul.dll mozilla::gfx::EventRingBuffer::RecordEvent<mozilla::gfx::RecordedSourceSurfaceCreation> gfx/2d/RecordedEvent.h:207
4 xul.dll mozilla::gfx::RecordedEventDerived<mozilla::gfx::RecordedSourceSurfaceCreation>::RecordToStream const gfx/2d/RecordedEvent.h:435
5 xul.dll mozilla::layers::CanvasDrawEventRecorder::RecordEvent gfx/layers/CanvasDrawEventRecorder.h:251
6 xul.dll mozilla::gfx::DrawEventRecorderPrivate::StoreSourceSurfaceRecording gfx/2d/DrawEventRecorder.cpp:46
7 xul.dll mozilla::gfx::EnsureSurfaceStoredRecording gfx/2d/DrawTargetRecording.cpp:47
8 xul.dll mozilla::gfx::DrawTargetRecording::OptimizeSourceSurface const gfx/2d/DrawTargetRecording.cpp:484
9 xul.dll static nsLayoutUtils::SurfaceFromElement layout/base/nsLayoutUtils.cpp:7896
Attachment #9161962 - Attachment description: Bug 1651116: Check DataSourceSurface is mapped in StoreSourceSurfaceRecording beefore recording. r=jrmuizel! → Bug 1651116: Check DataSourceSurface is mapped in StoreSourceSurfaceRecording before recording. r=jrmuizel!
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/1267361341b3
Check DataSourceSurface is mapped in StoreSourceSurfaceRecording before recording. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: