Bug 1651116: Check DataSourceSurface is mapped in StoreSourceSurfaceRecording before recording. r=jrmuizel

Depends on D82408

Differential Revision: https://phabricator.services.mozilla.com/D82585